implemented depth-first traversal. a bunch of refactoring, so that the inline versions use the configuration classes for each algorithm.
native image