@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id "me.champeau.jmh" version "0.7.2"
+    id 'org.graalvm.buildtools.native' version '0.10.5'
 }
 
 group = 'fr.ensta'
@@ -18,6 +19,9 @@ java {
 }
 
 dependencies {
+    compileOnly('org.graalvm.sdk:graal-sdk:24.1.2')
+    compileOnly('org.graalvm.nativeimage:svm:24.1.2')
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     jmh 'org.openjdk.jmh:jmh-core:1.37'
@@ -27,7 +31,36 @@ dependencies {
 application {
     mainClass = "fr.ensta.Main"
 }
+//run {
+//    jvmArgs = [   '--add-exports=jdk.internal.vm.ci/jdk.vm.ci.services=ALL-UNNAMED']
+//}
 
 test {
     useJUnitPlatform()
 }
+
+graalvmNative {
+    binaries.all {
+        verbose=true
+    }
+    binaries.main {
+        // options to configure the main binary
+        imageName = 'obp3-algos'
+        mainClass = 'fr.ensta.Main'
+        buildArgs.addAll( '-march=native') // enables additional compiler optimizations
+    }
+//    binaries {
+//        all {
+//            buildArgs.add('--no-fallback')
+//            imageName = "obp3-algos"
+//        }
+//    }
+}
+
+//tasks.withType<JavaCompile> {
+//    options.compilerArgs.addAll(arrayOf(
+//            "--add-exports", "jdk.internal.vm.ci/jdk.vm.ci.services=ALL-UNNAMED"
+//    ))
+//}
+
+//--add-exports=jdk.internal.vm.ci/jdk.vm.ci.services=ALL-UNNAMED
